flx: java运行参数错误